--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,10 @@
 @import './variables.css';
 
+html, body, #root {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 #root {
   min-height: 100vh;
   display: flex;
